--- a/setup.cfg
+++ b/setup.cfg
@@ -74,8 +74,8 @@ testing =
 # console_scripts =
 #     script_name = eateffort.module:function
 # For example:
-# console_scripts =
-#     fibonacci = eateffort.skeleton:run
+console_scripts =
+     eateffort = eateffort.main:run
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
