--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,7 @@ install_requires =
     importlib-metadata; python_version<"3.8"
     requests
     peewee
+    platformdirs
 
 
 [options.packages.find]
